--- a/slice_with_mergekit/slice.yaml
+++ b/slice_with_mergekit/slice.yaml
@@ -1,9 +1,9 @@
 slices:
   - sources:
-      - model: mistralai/Mistral-7B-Instruct-v0.2
+      - model: meta-llama/Llama-2-7b-hf
         layer_range: [0, 21]
   - sources:
-      - model: mistralai/Mistral-7B-Instruct-v0.2
+      - model: meta-llama/Llama-2-7b-hf
         layer_range: [29,32]
             
 merge_method: passthrough
